update redirect link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,18 @@
               <h1>Certification</h1>
             </div>
             <div class="content">
-              <h5>Certified Threat Intelligence Analyst (CTIA)</h5>
+              <div class="ctia">
+                <div class="cert-title">
+                  <h5>Certified Threat Intelligence Analyst (CTIA)</h5>
+                </div>
+                <div class="badge">
+                  <a
+                    href="https://aspen.eccouncil.org/VerifyBadge?&type=certification&a=+w/hjopaxv+d24Xlo8SUw8WTnZHnQskXlSpZWyWGgiU="
+                    target="_blank"
+                    >View Badge</a
+                  >
+                </div>
+              </div>
             </div>
           </div>
           <div class="contact">
@@ -139,15 +150,19 @@
             <div class="content">
               <div class="email">
                 <img src="assets/email.svg" alt="" />
-                <a href=""><h5>rizkylaksamana@gmail.com</h5></a>
+                <a href="#"><h5>rizkylaksamana@gmail.com</h5></a>
               </div>
               <div class="linkedin">
                 <img src="assets/linkedin.svg" alt="" />
-                <a href=""><h5>Rizky Laksamana</h5></a>
+                <a
+                  href="https://www.linkedin.com/in/rizkylaksamana/"
+                  target="_blank"
+                  ><h5>Rizky Laksamana</h5></a
+                >
               </div>
               <div class="whatsapp">
                 <img src="assets/whatsapp.svg" alt="" />
-                <a href=""><h5>085270593154</h5></a>
+                <a href="#"><h5>085270593154</h5></a>
               </div>
             </div>
           </div>
