--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                 <div class="cert-title">
                   <h5>Certified Threat Intelligence Analyst (CTIA)</h5>
                 </div>
-                <div class="badge">
+                <!-- <div class="badge">
                   <a
                     href="https://aspen.eccouncil.org/VerifyBadge?&type=certification&a=+w/hjopaxv+d24Xlo8SUw8WTnZHnQskXlSpZWyWGgiU="
                     target="_blank"
                     >View Badge</a
                   >
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
